--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/LinkedinBild.jpg" alt="profile_image">
+								<img src="assets/images/about/daniel_midsummer2.JPEG" alt="profile_image">
 								<div class="about-list-icon">
 									<ul>
 										<li>
