changed dowloaded file to CV

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> daníel <br> jóhannsson <span>.</span>   </h2>
 							<p>Software Engineer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<a href="assets/download/CV_Daniel_2023.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
