--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 											</a>
 										</li><!-- / li -->
 										<li>
-											<a href="#">
+											<a href="https://www.linkedin.com/in/daniel-johannsson/">
 												<i  class="fa fa-linkedin" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
@@ -686,7 +686,7 @@
 								<div class="hm-foot-icon">
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+										<li><a href="https://www.linkedin.com/in/daniel-johannsson/"><i class="fa fa-linkedin"></i></a></li><!--/li-->
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
 							</div><!--/.single-contact-box-->
