--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<ul>
 										<li>
 											<a href="#">
-												<i  class="fa fa-facebook" aria-hidden="true"></i>
+												<i  class="fa fa-github" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
 										<li>
