--- a/index.html
+++ b/index.html
@@ -150,18 +150,13 @@
 								<div class="about-list-icon">
 									<ul>
 										<li>
-											<a href="#">
+											<a href="https://github.com/danieljohannsson">
 												<i  class="fa fa-github" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
 										<li>
 											<a href="https://www.linkedin.com/in/daniel-johannsson/">
 												<i  class="fa fa-linkedin" aria-hidden="true"></i>
-											</a>
-										</li><!-- / li -->
-										<li>
-											<a href="#">
-												<i  class="fa fa-instagram" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
 										
@@ -685,7 +680,7 @@
 								</div><!--/.contact-adress-->
 								<div class="hm-foot-icon">
 									<ul>
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
+										<li><a href="https://github.com/danieljohannsson"><i class="fa fa-github"></i></a></li><!--/li-->
 										<li><a href="https://www.linkedin.com/in/daniel-johannsson/"><i class="fa fa-linkedin"></i></a></li><!--/li-->
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
