changed education information

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> daníel <br> jóhannsson <span>.</span>   </h2>
-							<p>Computer Science and Engineering student</p>
+							<p>computer science and engineering student</p>
 							<a href="assets/download/CV_Daniel_2023.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
@@ -184,8 +184,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2008 - 2010</h2>
-									<h3>master <span>of </span> computer science</h3>
+									<h2>2019 - 2020</h2>
+									<h3>bachelor <span>of </span> economics</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -194,9 +194,9 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
+											lund university
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>lund, sweden</h5>
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
@@ -207,8 +207,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> computer science</h3>
+									<h2>2020 - 2023</h2>
+									<h3>bachelor <span>of </span> computer science and engineering</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -217,9 +217,9 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
+											lund university
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>lund, sweden</h5>
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
@@ -230,8 +230,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> creative design</h3>
+									<h2>2023 - 2025</h2>
+									<h3>master <span>of </span> artificial intelligence</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -241,9 +241,9 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of bolton
+											lund university
 										</h4>
-										<h5>bolton, united kingdome</h5>
+										<h5>lund, sweden</h5>
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
