added education information

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 										</h4>
 										<h5>lund, sweden</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											Began my studies at Lund University in the fall of 2019. I studied economics for a year before I decided to change my major to computer science and engineering. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -221,7 +221,7 @@
 										</h4>
 										<h5>lund, sweden</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											After a year of studying economics I decided to change my major to computer science and engineering. This was a big change for me but I am very happy with my decision, sparking my interest in programming and software development.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -245,7 +245,7 @@
 										</h4>
 										<h5>lund, sweden</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											After my bachelor's degree I chose to continue my studies at Lund University and get a master's degree in artificial intelligence. My interest in AI started during my bachelor's degree and I am very excited to continue my studies in this field.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
