Minor fix in work experience

--- a/index.html
+++ b/index.html
@@ -378,7 +378,6 @@
 				<div class="experience-content">
 						<div class="main-timeline">
 							<ul>
-								
 
 								<li>
 									<div class="single-timeline-box fix">
@@ -461,7 +460,7 @@
 												<div class="timeline">
 													<div class="timeline-content text-right">
 														<h4 class="title">
-															lund university
+															ARKAD
 														</h4>
 														<h5>lund, sweden</h5>
 														<p class="description">
