Work experience description

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 														</h4>
 														<h5>stockholm, sweden</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Ericsson is a Swedish multinational networking and telecommunications company headquartered in Stockholm. I worked as a summer intern in the radio software development department. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -435,7 +435,7 @@
 														</h4>
 														<h5>lund, sweden</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Västgöta nation is one of the 13 student nations at Lund University. I was the product manager of the nation's worker system, responsible for the development and maintenance of the system. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -464,7 +464,7 @@
 														</h4>
 														<h5>lund, sweden</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															ARKAD is the largest career fair in the southern part of Sweden. I was the head of the backend team, responsible for the backend of the website and the database. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -500,7 +500,7 @@
 														</h4>
 														<h5>lund, sweden</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Helped students in the courses "Introduction to Programming in Java" and "Introduction to Programming in Python" with their assignments and projects. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
