--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
-													<a class="contact-btn" href="#" role="button">submit</a>
+													<a class="contact-btn" href="mailto:daniel.johannsson1999@gmail.com" role="button">submit</a>
 												</div><!--/.single-single-contact-btn-->
 											</div><!--/.col-->
 										</div><!--/.row-->
