--- a/index.html
+++ b/index.html
@@ -594,45 +594,7 @@
 				<div class="contact-content">
 					<div class="row">
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
-							<div class="single-contact-box">
-								<div class="contact-form">
-									<form>
-										<div class="row">
-											<div class="col-sm-6 col-xs-12">
-												<div class="form-group">
-												  <input type="text" class="form-control" id="name" placeholder="Name*" name="name">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-											<div class="col-sm-6 col-xs-12">
-												<div class="form-group">
-													<input type="email" class="form-control" id="email" placeholder="Email*" name="email">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="form-group">
-													<input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="form-group">
-													<textarea class="form-control" rows="8" id="comment" placeholder="Message" ></textarea>
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="single-contact-btn">
-													<a class="contact-btn" href="mailto:daniel.johannsson1999@gmail.com" role="button">submit</a>
-												</div><!--/.single-single-contact-btn-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-									</form><!--/form-->
-								</div><!--/.contact-form-->
-							</div><!--/.single-contact-box-->
+							
 						</div><!--/.col-->
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
@@ -648,7 +610,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<p>daniel.johannsson1999@gmail.com</p>
+											<a href="mailto:daniel.johannsson1999@gmail.com">daniel.johannsson1999@gmail.com</a>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
