removed hyperlink from mail

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<a href="mailto:daniel.johannsson1999@gmail.com">daniel.johannsson1999@gmail.com</a>
+											<p>daniel.johannsson1999@gmail.com</p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
