--- a/index.html
+++ b/index.html
@@ -423,12 +423,12 @@
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
 												<a href=""><i class="flaticon-docker-logo"></i></a>
-												<div class="profile-icon-name">github</div>
+												<div class="profile-icon-name">docker</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><i class="flaticon-docker-logo"></i></a>
-													<div class="profile-icon-name">github</div>
+													<div class="profile-icon-name">docker</div>
 												</div>
 											</div>
 										</div>
