--- a/index.html
+++ b/index.html
@@ -422,13 +422,13 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-linux-logo"></i></a>
-												<div class="profile-icon-name">linux</div>
+												<a href=""><i class="flaticon-github-logo"></i></a>
+												<div class="profile-icon-name">github</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-linux-logo"></i></a>
-													<div class="profile-icon-name">linux</div>
+													<a href=""><i class="flaticon-github-logo"></i></a>
+													<div class="profile-icon-name">github</div>
 												</div>
 											</div>
 										</div>
