--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><i class="fa fa-linux"></i></a>
+												<a href=""><i class="fa fa-docker"></i></a>
 												<div class="profile-icon-name">github</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="fa fa-linux"></i></a>
+													<a href=""><i class="fa fa-docker"></i></a>
 													<div class="profile-icon-name">github</div>
 												</div>
 											</div>
