--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><img
+												<a href=""><img class="single-profile"
 													src="assets/images/profiles/docker-svgrepo-com.svg"
 													alt="triangle with all three sides equal"
 													height="87"
@@ -431,7 +431,7 @@
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img
+													<a href=""><img class="single-profile-overlay"
 														src="assets/images/profiles/docker-svgrepo-com.svg"
 														alt="triangle with all three sides equal"
 														height="87"
