--- a/index.html
+++ b/index.html
@@ -422,20 +422,20 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><img class="single-profile"
+												<a href=""><img
 													src="assets/images/profiles/docker-svgrepo-com.svg"
-													alt="triangle with all three sides equal"
-													height="87"
-													width="100" /></a>
+													color="#b2c1ce"
+													height="80"
+													width="80" /></a>
 												<div class="profile-icon-name">github</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img class="single-profile-overlay"
+													<a href=""><img
 														src="assets/images/profiles/docker-svgrepo-com.svg"
-														alt="triangle with all three sides equal"
-														height="87"
-														width="100" /></a>
+														color="#b2c1ce"
+														height="80"
+														width="80" /></a>
 													<div class="profile-icon-name">github</div>
 												</div>
 											</div>
