--- a/index.html
+++ b/index.html
@@ -422,12 +422,20 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><img src="assets/images/profiles/docker-svgrepo-com.svg"/></a>
+												<a href=""><img 
+													src="assets/images/profiles/docker-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
 												<div class="profile-icon-name">github</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img src="assets/images/profiles/docker-svgrepo-com.svg"/></a>
+													<a href=""><img 
+														src="assets/images/profiles/docker-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
 													<div class="profile-icon-name">github</div>
 												</div>
 											</div>
