--- a/index.html
+++ b/index.html
@@ -380,13 +380,21 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-themeforest"></i></a>
-												<div class="profile-icon-name">themeforest</div>
+												<a href=""><img 
+													src="assets/images/profiles/java-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
+												<div class="profile-icon-name">java</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-themeforest"></i></a>
-													<div class="profile-icon-name">themeforest</div>
+													<a href=""><img 
+														src="assets/images/profiles/java-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
+													<div class="profile-icon-name">java</div>
 												</div>
 											</div>
 										</div>
