--- a/index.html
+++ b/index.html
@@ -424,13 +424,21 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-behance-logo"></i></a>
-												<div class="profile-icon-name">behance</div>
+												<a href=""><img 
+													src="assets/images/profiles/typescript-official-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
+												<div class="profile-icon-name">typescript</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-behance-logo"></i></a>
-													<div class="profile-icon-name">behance</div>
+													<a href=""><img 
+														src="assets/images/profiles/typescript-official-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
+													<div class="profile-icon-name">typescript</div>
 												</div>
 											</div>
 										</div>
@@ -443,7 +451,7 @@
 													height="80"
 													width="80"/>
 												</a>
-												<div class="profile-icon-name">github</div>
+												<div class="profile-icon-name">docker</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
@@ -452,7 +460,7 @@
 														height="80"
 														width="80"/>
 													</a>
-													<div class="profile-icon-name">github</div>
+													<div class="profile-icon-name">docker</div>
 												</div>
 											</div>
 										</div>
