--- a/index.html
+++ b/index.html
@@ -471,13 +471,21 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-												<div class="profile-icon-name">flickR</div>
+												<a href=""><img 
+													src="assets/images/profiles/git-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
+												<div class="profile-icon-name">git</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-													<div class="profile-icon-name">flickR</div>
+													<a href=""><img 
+														src="assets/images/profiles/git-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
+													<div class="profile-icon-name">git</div>
 												</div>
 											</div>
 										</div>
