added linux as skill

--- a/index.html
+++ b/index.html
@@ -493,13 +493,21 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-smug"></i></a>
-												<div class="profile-icon-name">smungMung</div>
+												<a href=""><img 
+													src="assets/images/profiles/linux-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
+												<div class="profile-icon-name">linux</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-smug"></i></a>
-													<div class="profile-icon-name">smungMung</div>
+													<a href=""><img 
+														src="assets/images/profiles/linux-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
+													<div class="profile-icon-name">linux</div>
 												</div>
 											</div>
 										</div>
