--- a/index.html
+++ b/index.html
@@ -537,13 +537,21 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><i class="flaticon-bitbucket-logotype-camera-lens-in-perspective"></i></a>
-												<div class="profile-icon-name">bitBucket</div>
+												<a href=""><img 
+													src="assets/images/profiles/ci-cd-svgrepo-com.svg"
+													height="80"
+													width="80"/>
+												</a>
+												<div class="profile-icon-name">scrum</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><i class="flaticon-bitbucket-logotype-camera-lens-in-perspective"></i></a>
-													<div class="profile-icon-name">bitBucket</div>
+													<a href=""><img 
+														src="assets/images/profiles/ci-cd-svgrepo-com.svg"
+														height="80"
+														width="80"/>
+													</a>
+													<div class="profile-icon-name">scrum</div>
 												</div>
 											</div>
 										</div>
