modified skills logos and added react

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/java-svgrepo-com.svg"
+													src="assets/images/skills/java-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -390,7 +390,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/java-svgrepo-com.svg"
+														src="assets/images/skills/java-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -403,7 +403,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/python-127-svgrepo-com.svg"
+													src="assets/images/skills/python-127-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -412,7 +412,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/python-127-svgrepo-com.svg"
+														src="assets/images/skills/python-127-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -425,7 +425,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/typescript-official-svgrepo-com.svg"
+													src="assets/images/skills/typescript-official-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -434,7 +434,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/typescript-official-svgrepo-com.svg"
+														src="assets/images/skills/typescript-official-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -447,7 +447,7 @@
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/docker-svgrepo-com.svg"
+													src="assets/images/skills/docker-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -456,7 +456,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/docker-svgrepo-com.svg"
+														src="assets/images/skills/docker-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -472,7 +472,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/git-svgrepo-com.svg"
+													src="assets/images/skills/git-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -481,7 +481,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/git-svgrepo-com.svg"
+														src="assets/images/skills/git-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -494,7 +494,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/linux-svgrepo-com.svg"
+													src="assets/images/skills/linux-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -503,7 +503,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/linux-svgrepo-com.svg"
+														src="assets/images/skills/linux-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -516,7 +516,7 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/azure-svgrepo-com.svg"
+													src="assets/images/skills/azure-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
@@ -525,7 +525,7 @@
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/azure-svgrepo-com.svg"
+														src="assets/images/skills/azure-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
@@ -538,20 +538,20 @@
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
 												<a href=""><img 
-													src="assets/images/profiles/ci-cd-svgrepo-com.svg"
+													src="assets/images/skills/react-svgrepo-com.svg"
 													height="80"
 													width="80"/>
 												</a>
-												<div class="profile-icon-name">scrum</div>
+												<div class="profile-icon-name">react</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<a href=""><img 
-														src="assets/images/profiles/ci-cd-svgrepo-com.svg"
+														src="assets/images/skills/react-svgrepo-com.svg"
 														height="80"
 														width="80"/>
 													</a>
-													<div class="profile-icon-name">scrum</div>
+													<div class="profile-icon-name">react</div>
 												</div>
 											</div>
 										</div>
