--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a Computer Science and Engineering student. Consectetur an adipisi elita, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud.
+									Welcome to my page! My name is Daníel Jóhannsson and I am a computer science and engineering student at Lund University. I am currently in my first year of my master's degree in artificial intelligence. I am a very curious and hardworking person who is always looking for new challenges.
 								</h3>
 								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
+									I am very interested in everything related to technology and I am always looking to learn new things. Which is why I am currently studying computer science and engineering with a focus on artificial intelligence. I am also very interested in entrepreneurship and have been involved in several projects related to entrepreneurship. My previous work experiences are mainly related to software development, but I plan on moving towards a more business-oriented career in the future. In particular the startup scene is a very interesting field for me.
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
@@ -257,7 +257,7 @@
 
 		</section><!--/.education-->
 		<!--education end -->
-		
+
 				<!--profiles start -->
 				<section id="profiles" class="profiles">
 					<div class="profiles-details">
