--- a/index.html
+++ b/index.html
@@ -270,20 +270,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/java-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">java</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/java-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">java</div>
 												</div>
 											</div>
