removed links from logos

--- a/index.html
+++ b/index.html
@@ -290,20 +290,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/python-127-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">python</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/python-127-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">python</div>
 												</div>
 											</div>
@@ -312,20 +310,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/typescript-official-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">typescript</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/typescript-official-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">typescript</div>
 												</div>
 											</div>
@@ -334,20 +330,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/docker-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">docker</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/docker-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">docker</div>
 												</div>
 											</div>
@@ -359,20 +353,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/git-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">git</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/git-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">git</div>
 												</div>
 											</div>
@@ -381,20 +373,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/linux-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">linux</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/linux-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">linux</div>
 												</div>
 											</div>
@@ -403,20 +393,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/azure-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">azure</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/azure-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">azure</div>
 												</div>
 											</div>
@@ -425,20 +413,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
-												<a href=""><img 
+												<img 
 													src="assets/images/skills/react-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												</a>
 												<div class="profile-icon-name">react</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<a href=""><img 
+													<img 
 														src="assets/images/skills/react-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													</a>
 													<div class="profile-icon-name">react</div>
 												</div>
 											</div>
