--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 
 								
 
-								<div class="col-sm-4">
+								<div class="col">
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
@@ -610,7 +610,7 @@
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 
-								<div class="col-sm-4">
+								<div class="col">
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
