--- a/index.html
+++ b/index.html
@@ -597,8 +597,6 @@
 						<div class="isotope">
 							<div class="row">
 
-								
-
 								<div class="col-sm-4">
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
@@ -616,6 +614,17 @@
 										<div class="isotope-overlay">
 											<a href="#">
 												web design
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Coming soon...
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
