--- a/index.html
+++ b/index.html
@@ -311,18 +311,18 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<img 
-													src="assets/images/skills/typescript-official-svgrepo-com.svg"
+													src="assets/images/skills/javascript-155-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												<div class="profile-icon-name">typescript</div>
+												<div class="profile-icon-name">javascript</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<img 
-														src="assets/images/skills/typescript-official-svgrepo-com.svg"
+														src="assets/images/skills/javascript-155-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													<div class="profile-icon-name">typescript</div>
+													<div class="profile-icon-name">javscript</div>
 												</div>
 											</div>
 										</div>
