trying a styling trick

--- a/index.html
+++ b/index.html
@@ -270,18 +270,18 @@
 									<div class="col-sm-3">
 										<div class="single-profile">
 											<div class="profile-txt">
-												<img 
+												<a><i><img 
 													src="assets/images/skills/java-svgrepo-com.svg"
 													height="80"
-													width="80"/>
+													width="80"/></i></a>
 												<div class="profile-icon-name">java</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
-													<img 
+													<a><i><img 
 														src="assets/images/skills/java-svgrepo-com.svg"
 														height="80"
-														width="80"/>
+														width="80"/></i></a>
 													<div class="profile-icon-name">java</div>
 												</div>
 											</div>
