Added arkad to portfolio

--- a/index.html
+++ b/index.html
@@ -599,10 +599,10 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/arkad.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web design
+											<a href="https://github.com/careerfairsystems/nexpo-backend-nova">
+												ARKAD app
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -612,8 +612,8 @@
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web design
+											<a href="https://github.com/Nation-Lund-Tech/vg-fronted">
+												Västgöta nation worker system
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
