--- a/index.html
+++ b/index.html
@@ -610,10 +610,10 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/VG-app.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://github.com/Nation-Lund-Tech/vg-fronted">
-												Västgöta nation worker system
+												VG-Nation worker system
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
