--- a/index.html
+++ b/index.html
@@ -619,7 +619,16 @@
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 
-								
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Coming soon...
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
 
 								
 							</div><!-- /.row -->
