modified about me page

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									Welcome to my page! My name is Daníel Jóhannsson and I am a computer science and engineering student at Lund University. I am currently in my first year of my master's degree in artificial intelligence. I am a very curious and hardworking person who is always looking for new challenges.
 								</h3>
 								<p>
-									I am very interested in everything related to technology and I am always looking to learn new things. Which is why I am currently studying computer science and engineering with a focus on artificial intelligence. I am also very interested in entrepreneurship and have been involved in several projects related to entrepreneurship. My previous work experiences are mainly related to software development, but I plan on moving towards a more business-oriented career in the future. In particular the startup scene is a very interesting field for me.
+									I am very interested in everything related to technology, which is why I am currently studying computer science and engineering with a focus on artificial intelligence. I am also very interested in entrepreneurship and have been involved in several projects related to entrepreneurship. My previous work experiences are mainly related to software development, but I plan on moving towards a more business-oriented career in the future. In particular the startup scene is a very interesting field for me.
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
