Modified about me page

--- a/index.html
+++ b/index.html
@@ -123,10 +123,17 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Welcome to my page! My name is Daníel Jóhannsson and I am a computer science and engineering student at Lund University. I am currently in my first year of my master's degree in artificial intelligence. I am a very curious and hardworking person who is always looking for new challenges.
+									Welcome to my page! My name is Daníel Jóhannsson and I am a 23 year old Computer Science and Engineering student at Lund University.
+									Currently I am enrolled in my fourth year, looking to graduate in the summer of 2025 with a master's degree in artificial intelligence.
+									The reason I chose this field of studies was due to my strong passion for technology and problem solving, but also a strong interest
+									in startups and entrepreneurship. 
 								</h3>
 								<p>
-									I am very interested in everything related to technology, which is why I am currently studying computer science and engineering with a focus on artificial intelligence. I am also very interested in entrepreneurship and have been involved in several projects related to entrepreneurship. My previous work experiences are mainly related to software development, but I plan on moving towards a more business-oriented career in the future. In particular the startup scene is a very interesting field for me.
+									My current experiences consist of working with software development at Ericsson AB as well as in several non-profit projects.
+									A current goal of mine is to gain more experience within software development, but also steer towards a more business oriented role.
+									A combination of technology and business is what I am the most interested in, drawing me to roles such as product manager or working at a smaller company.
+									Apart from my professional self, I am an average student who likes to travel, workout and socialize with close ones. I also enjoy learning new things and
+									constantly having ongoing projects or ideas that I work on. 
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
