--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/coleAI.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Coming soon...
