modified about me

--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
 								<h3>
 									Welcome to my page! My name is Daníel Jóhannsson and I am a 23 year old Computer Science and Engineering student at Lund University.
 									Currently I am enrolled in my fourth year, looking to graduate in the summer of 2025 with a master's degree in artificial intelligence.
-									The reason I chose this field of studies was due to my strong passion for technology and problem solving, but also a strong interest
-									in startups and entrepreneurship. 
 								</h3>
 								<p>
-									My current experiences consist of working with software development at Ericsson AB as well as in several non-profit projects.
+									The reason I chose this field of studies was due to my strong passion for technology and problem solving, but also a strong interest
+									in startups and entrepreneurship. My current experiences consist of working with software development at Ericsson AB as well as in several non-profit projects.
 									A current goal of mine is to gain more experience within software development, but also steer towards a more business oriented role.
 									A combination of technology and business is what I am the most interested in, drawing me to roles such as product manager or working at a smaller company.
 									Apart from my professional self, I am an average student who likes to travel, workout and socialize with close ones. I also enjoy learning new things and
