few modifications again

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									The reason I chose this field of studies was due to my strong passion for technology and problem solving, but also a strong interest
 									in startups and entrepreneurship. My current experiences consist of working with software development at Ericsson AB as well as in several non-profit projects.
 									A current goal of mine is to gain more experience within software development, but also steer towards a more business oriented role.
-									A combination of technology and business is what I am the most interested in, drawing me to roles such as product manager or working at a smaller company.
+									A combination of technology and business is what interests me the most, drawing me towards diverse roles or roles at smaller companies.
 									Apart from my professional self, I am an average student who likes to travel, workout and socialize with close ones. I also enjoy learning new things and
 									constantly having ongoing projects or ideas that I work on. 
 								</p>
