--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Welcome to my page! My name is Daníel Jóhannsson and I am a 23 year old Computer Science and Engineering student at Lund University.
+									Hello and welcome! My name is Daníel Jóhannsson and I am a 23 year old Computer Science and Engineering student at Lund University.
 									Currently I am enrolled in my fourth year, looking to graduate in the summer of 2025 with a master's degree in artificial intelligence.
 								</h3>
 								<p>
-									The reason I chose this field of studies was due to my strong passion for technology and problem solving, but also a strong interest
-									in startups and entrepreneurship. My current experiences consist of working with software development at Ericsson AB as well as in several non-profit projects.
-									A current goal of mine is to gain more experience within software development, but also steer towards a more business oriented role.
-									A combination of technology and business is what interests me the most, drawing me towards diverse roles or roles at smaller companies.
-									Apart from my professional self, I am an average student who likes to travel, workout and socialize with close ones. I also enjoy learning new things and
+									The reason I chose Computer Science was due to my strong passion for technology and problem solving, but also a strong interest
+									in startups and entrepreneurship. My current experiences consist of working with software development at Ericsson and several non-profit projects.
+									A current goal of mine is to gain more work experience within software development, but also steer towards a more business oriented role.
+									A combination of technology and business is what interests me the most, drawing me towards roles at smaller companies.
+									Apart from my professional self, I am an average student who likes to travel, workout and socialize with friends. I also enjoy learning new things and
 									constantly having ongoing projects or ideas that I work on. 
 								</p>
 								<div class="row">
