--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-form">
-									<form>
+									<form action="https://formsubmit.co/daniel.johannsson1999@gmail.com" method="POST">
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
@@ -687,7 +687,7 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
-													<a class="contact-btn" href="mailto:daniel.johannsson1999@gmail.com" role="button">submit</a>
+													<button class="contact-btn" type="submit">submit</button>
 												</div><!--/.single-single-contact-btn-->
 											</div><!--/.col-->
 										</div><!--/.row-->
