added routing to thank you page

--- a/index.html
+++ b/index.html
@@ -687,6 +687,8 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
+													<input type="hidden" name="_captcha" value="false" />
+													<input type="hidden" name="_next" value="https://danieljohannsson.github.io/thankyou.html" />
 													<button class="contact-btn" type="submit">submit</button>
 												</div><!--/.single-single-contact-btn-->
 											</div><!--/.col-->
