navbar fixed for skills

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 		<!--education end -->
 
 				<!--profiles start -->
-				<section id="profiles" class="profiles">
+				<section id="skills" class="profiles">
 					<div class="profiles-details">
 						<div class="section-heading text-center">
 							<h2>skills</h2>
